loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:19: error: illegal start of simple expression
}
^Poucet2:20: error: 'while' expected but identifier found.
forward();
^Poucet2:20: error: '(' expected but ';' found.
forward();
         ^