loopdowhile.Poucet2.scala.code
forward();
do{
  var count:Int=0
  while (crossing()==false){
    forward();
    if (isOverBaggle==true){
      count=count+1
    }
  }

  
  if (count>2){
    left();forward();
  } else {
    right();forward();
  }
  count=0
 while(exitReached()==false)
}
forward();
